quick fix sizing and spacing

--- a/assets/sass/components/_cards.scss
+++ b/assets/sass/components/_cards.scss
@@ -3,6 +3,8 @@
 @mixin card {
     // SPECIFIC VARIABLES(USE ONLY IN COMPONENT)
     // >>>>>>>>>>>>>>>>>>>>>>>
+    $card-border-width: 30px; // 1px
+    $card-border-color: $color-white; // $color-gray-10
 
     // MIXINS
     // >>>>>>>>>>>>>>>>>>>>>>>
@@ -12,36 +14,36 @@
     max-width: 480px;
     margin: auto;
     height: 100%;
-    
+
     // STYLES OF CHILD CLASS
     // >>>>>>>>>>>>>>>>>>>>>>>
     &.has-border{
         &.is-first{
-            border: 1px solid $color-gray-10;
+            border: $card-border-width solid $card-border-color;
             &.new-row{
-                border-top: 0px solid $color-gray-10;
-                border-bottom: 1px solid $color-gray-10;
-                border-right: 1px solid $color-gray-10;
-                border-left: 1px solid $color-gray-10;
+                border-top: 0px solid $card-border-color;
+                border-bottom: $card-border-width solid $card-border-color;
+                border-right: $card-border-width solid $card-border-color;
+                border-left: $card-border-width solid $card-border-color;
             }
         }
         &.is-then{
-            border-top: 1px solid $color-gray-10;
-            border-bottom: 1px solid $color-gray-10;
-            border-right: 1px solid $color-gray-10;
-            border-left: 0px solid $color-gray-10;
+            border-top: $card-border-width solid $card-border-color;
+            border-bottom: $card-border-width solid $card-border-color;
+            border-right: $card-border-width solid $card-border-color;
+            border-left: 0px solid $card-border-color;
             &.new-row{
-                border-top: 0px solid $color-gray-10;
-                border-bottom: 1px solid $color-gray-10;
-                border-right: 1px solid $color-gray-10;
-                border-left: 0px solid $color-gray-10;
+                border-top: 0px solid $card-border-color;
+                border-bottom: $card-border-width solid $card-border-color;
+                border-right: $card-border-width solid $card-border-color;
+                border-left: 0px solid $card-border-color;
             }
         }
         &.is-final{
-            border-top: 0px solid $color-gray-10;
-            border-bottom: 1px solid $color-gray-10;
-            border-right: 1px solid $color-gray-10;
-            border-left: 0px solid $color-gray-10;
+            border-top: 0px solid $card-border-color;
+            border-bottom: $card-border-width solid $card-border-color;
+            border-right: $card-border-width solid $card-border-color;
+            border-left: 0px solid $card-border-color;
         }
     }
     a {
@@ -81,7 +83,7 @@
             background: $color-pink-1;
         }
         .card-detail , .card-sub-detail{
-            color: $color-white;        
+            color: $color-white;
         }
     }
 
