--- a/assets/sass/components/_fields.scss
+++ b/assets/sass/components/_fields.scss
@@ -346,7 +346,7 @@ $field-padding-side-deault: 20px;
 // ------------------------------------------------
 @mixin form-icon(
     $form-icon-max-width: 650px,
-    $form-icon-height: 58px,
+    $form-icon-height: 48px,
     $form-icon-border: none,
     $form-icon-border-radius: 5px,
     $form-icon-font-size: font-secondary-size(size-4),
