--- a/assets/sass/pages/_tipsforparents.scss
+++ b/assets/sass/pages/_tipsforparents.scss
@@ -107,10 +107,10 @@
 
     // STYLES OF COMPONENT ITSELF
     // >>>>>>>>>>>>>>>>>>>>>>>
-    min-height: 100px;
+    min-height: auto;
     display: flex;
     align-items: center;
-    padding: 0px 60px;
+    padding: 10px 50px;
     background-image:  url('#{path-file(images)}/content/tipsforparents/tipsforparents-rubber-wood.jpg') ;
     background-size: cover;
     background-repeat: repeat-x;
